# Judger

./: .travis.yml  CMakeLists.txt
bindings/Python/: _judger.c
bindings/Python/_judger/: __init__.py
src/: #main.c#  runner.c
src/rules/: c_cpp.c  general.c
tests/Python_and_core/testcase/integration/: test.py
